--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "sharp": "^0.32.6",
     "styled-components": "^5.3.11",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
